[gd_scene load_steps=2 format=3 uid="uid://d28fvc2843sau"]

[ext_resource type="Script" uid="uid://cyyveu1fwi2j3" path="res://Map/Button.gd" id="1_6ypi6"]

[node name="Button" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6ypi6")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 1918.0
offset_bottom = 339.0
theme_override_font_sizes/font_size = 166
toggle_mode = true
text = "Select"

[node name="PopupMenu" type="PopupMenu" parent="Button"]
position = Vector2i(0, 340)
size = Vector2i(1918, 616)
unresizable = false
theme_override_font_sizes/font_size = 0
hide_on_item_selection = false
item_count = 2
item_0/text = "Battle"
item_0/id = 0
item_1/text = "Dungeon"
item_1/id = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
[connection signal="id_pressed" from="Button/PopupMenu" to="." method="_on_popup_menu_id_pressed"]
[connection signal="id_pressed" from="Button/PopupMenu" to="Button" method="_on_popup_menu_id_pressed"]
[connection signal="popup_hide" from="Button/PopupMenu" to="." method="_on_popup_menu_popup_hide"]
